--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "mongoose": "^8.2.1",
     "moongoose": "^0.0.5",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^8.0.0"
+    "passport-local-mongoose": "^8.0.0",
+    "uuid": "^9.0.1"
   }
 }
