--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
+    "socket.io": "^4.7.5",
     "uuid": "^9.0.1"
   }
 }
