Correction in File animation

--- a/.hintrc
+++ b/.hintrc
@@ -27,6 +27,12 @@
         "nested-interactive": "off"
       }
     ],
-    "button-type": "off"
+    "button-type": "off",
+    "axe/name-role-value": [
+      "default",
+      {
+        "link-name": "off"
+      }
+    ]
   }
 }
