--- a/.hintrc
+++ b/.hintrc
@@ -31,7 +31,8 @@
     "axe/name-role-value": [
       "default",
       {
-        "link-name": "off"
+        "link-name": "off",
+        "button-name": "off"
       }
     ]
   }
