--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGO_URI = 'mongodb://127.0.0.1:27017/Explain'
+# MONGO_URI = 'mongodb://127.0.0.1:27017/Explain'
+MONGO_URI = 'mongodb+srv://root:root@cluster0.cypiqei.mongodb.net/Explain'
